--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,7 +3,9 @@
     <!-- Sale badge-->
     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
     <!-- Product image-->
-    <%= image_tag product.image if product.image.attached? %>
+    <%= link_to(product_path(product)) do %>
+      <%= image_tag product.image.variant(resize_to_fit: [250, 300]) if product.image.attached? %>
+    <% end %>
     <!-- Product details-->
     <div class="card-body p-4">
       <div class="text-center">
