商品価格を小数点2桁にフォーマット

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,7 +20,7 @@
           <div class="bi-star-fill"></div>
         </div>
         <!-- Product price-->
-        <%= product.price %>
+        <%= number_with_precision(product.price, precision: 2) %>
       </div>
     </div>
     <!-- Product actions-->
