商品価格を日本円で表示させる

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -18,7 +18,7 @@
           <div class="bi-star-fill"></div>
         </div>
         <!-- Product price-->
-        <%= product.price %>
+        <%= number_to_currency(product.price, locale: 'jp') %>
       </div>
     </div>
     <!-- Product actions-->
