テンプレートの英語を自分仕様に書き換え

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+    <p class="m-0 text-center text-white">Copyright &copy; 8tak8tako8 STORE 2023</p>
   </div>
 </footer>
