--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -7,37 +7,36 @@
       <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
           <span class="text-primary">カート</span>
-          <span class="badge bg-primary rounded-pill">3</span>
+          <span class="badge bg-primary rounded-pill"><%= current_cart.total_quantity %></span>
         </h4>
         <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between lh-sm">
-            <div>
-              <h6 class="my-0">Product name</h6>
-            </div>
-            <span class="text-body-secondary">$12</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-sm">
-            <div>
-              <h6 class="my-0">Second product</h6>
-            </div>
-            <span class="text-body-secondary">$8</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-sm">
-            <div>
-              <h6 class="my-0">Third item</h6>
-            </div>
-            <span class="text-body-secondary">$5</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
+          <% current_cart.cart_products.each do |cart_product| %>
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+              <div>
+                <h6 class="my-0"><%= cart_product.product.name %></h6>
+              </div>
+              <div class="col-md-5">
+                <%= form_with url: 'carts/remove-from-cart', method: :delete do |form| %>
+                  <%= form.hidden_field :product_id, value: cart_product.product.id %>
+                  <%= form.submit "削除", class: "btn btn-outline-dark mt-auto" %>
+                <% end %>
+              </div>
+              <span class="text-body-secondary">
+                <%= number_to_currency(cart_product.product.price, locale: 'jp') %>
+                <%= " x #{cart_product.quantity}" %>
+              </span>
+            </li>
+          <% end %>
+          <%# <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
             <div class="text-success">
               <h6 class="my-0">Promo code</h6>
               <small>EXAMPLECODE</small>
             </div>
             <span class="text-success">−$5</span>
-          </li>
+          </li> %>
           <li class="list-group-item d-flex justify-content-between">
-            <span>Total (USD)</span>
-            <strong>$20</strong>
+            <span>合計金額</span>
+            <strong><%= number_to_currency(current_cart.total_price, locale: 'jp') %></strong>
           </li>
         </ul>
         <form class="card p-2">
@@ -104,6 +103,7 @@
           </div>
           <hr class="my-4">
           <button class="w-100 btn btn-primary btn-lg" type="submit">購入する</button>
+          <hr class="my-4">
         </form>
       </div>
     </div>
