--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -34,31 +34,38 @@
       </div>
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">請求先</h4>
-        <form class="needs-validation" novalidate>
+        <%= form_with model: @order do |form| %>
+          <%= form.hidden_field :total_price, value: current_cart.total_price %>
+          <% current_cart.cart_products.each_with_index do |cart_product, index| %>
+            <%= form.hidden_field "order_details[][product_name]", value: cart_product.product.name %>
+            <%= form.hidden_field "order_details[][product_sku]", value: cart_product.product.sku %>
+            <%= form.hidden_field "order_details[][unit_price]", value: cart_product.product.price %>
+            <%= form.hidden_field "order_details[][quantity]", value: cart_product.quantity %>
+          <% end %>
           <div class="row g-3">
             <div class="col-sm-6">
-              <label for="lastName" class="form-label">姓</label>
-              <input type="text" class="form-control" id="lastName" placeholder="田中" value="" required>
+              <%= form.label :last_name, '姓', class: "form-label" %>
+              <%= form.text_field :last_name, class: "form-control", placeholder: "田中" %>
             </div>
             <div class="col-sm-6">
-              <label for="firstName" class="form-label">名</label>
-              <input type="text" class="form-control" id="firstName" placeholder="太郎" value="" required>
+              <%= form.label :first_name, '名', class: "form-label" %>
+              <%= form.text_field :first_name, class: "form-control", placeholder: "太郎" %>
             </div>
             <div class="col-12">
-              <label for="email" class="form-label">Email（任意）</label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
+              <%= form.label :email, 'Email（任意）', class: "form-label" %>
+              <%= form.text_field :email, class: "form-control", placeholder: "example@example.com" %>
             </div>
             <div class="col-12">
-              <label for="address" class="form-label">都道府県</label>
-              <input type="text" class="form-control" id="address" placeholder="東京都" required>
+              <%= form.label :prefecture, '都道府県', class: "form-label" %>
+              <%= form.text_field :prefecture, class: "form-control", placeholder: "東京都" %>
             </div>
             <div class="col-12">
-              <label for="address2" class="form-label">市区町村</label>
-              <input type="text" class="form-control" id="address2" placeholder="渋谷区東" required>
+              <%= form.label :address, '市区町村', class: "form-label" %>
+              <%= form.text_field :address, class: "form-control", placeholder: "渋谷区東" %>
             </div>
             <div class="col-12">
-              <label for="address2" class="form-label">丁目・番地</label>
-              <input type="text" class="form-control" id="address3" placeholder="1-1-1" required>
+              <%= form.label :address2, '丁目・番地', class: "form-label" %>
+              <%= form.text_field :address2, class: "form-control", placeholder: "1-1-1" %>
             </div>
           </div>
           <hr class="my-4">
@@ -71,26 +78,26 @@
           </div>
           <div class="row gy-3">
             <div class="col-md-6">
-              <label for="cc-name" class="form-label">名前</label>
-              <input type="text" class="form-control" id="cc-name" placeholder="TARO TANAKA" required>
+              <%= form.label :card_name, 'カード名', class: "form-label" %>
+              <%= form.text_field :card_name, class: "form-control", placeholder: "TARO TANAKA" %>
             </div>
             <div class="col-md-6">
-              <label for="cc-number" class="form-label">カード番号</label>
-              <input type="text" class="form-control" id="cc-number" placeholder="1111111111111111" required>
+              <%= form.label :card_number, 'カード番号', class: "form-label" %>
+              <%= form.text_field :card_number, class: "form-control", minlength: "14", maxlength: "16", placeholder: "1111111111111111" %>
             </div>
             <div class="col-md-3">
-              <label for="cc-expiration" class="form-label">有効期限</label>
-              <input type="text" class="form-control" id="cc-expiration" placeholder="月 / 年" required>
+              <%= form.label :card_expiration_date, '有効期限', class: "form-label" %>
+              <%= form.text_field :card_expiration_date, class: "form-control", minlength: "4", maxlength: "4", placeholder: "2701" %>
             </div>
             <div class="col-md-3">
-              <label for="cc-cvv" class="form-label">CVV</label>
-              <input type="text" class="form-control" id="cc-cvv" placeholder="000" required>
+              <%= form.label :card_cvv, 'CVV', class: "form-label" %>
+              <%= form.text_field :card_cvv, class: "form-control", minlength: "3", maxlength: "4", placeholder: "111" %>
             </div>
           </div>
           <hr class="my-4">
           <button class="w-100 btn btn-primary btn-lg" type="submit">購入する</button>
           <hr class="my-4">
-        </form>
+        <% end %>
       </div>
     </div>
   </main>
