--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,9 +3,7 @@
     <!-- Sale badge-->
     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
     <!-- Product image-->
-    <%= link_to(product_path(product)) do %>
-      <%= image_tag product.image.variant(resize_to_fit: [250, 300]) if product.image.attached? %>
-    <% end %>
+    <%= image_tag product.image if product.image.attached? %>
     <!-- Product details-->
     <div class="card-body p-4">
       <div class="text-center">
