flashメッセージを緑色に変更

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-  <div class="alert alert-danger"><%= flash[:notice] %></div>
+  <div class="alert alert-primary"><%= flash[:notice] %></div>
 <% end %>
 <header class="bg-dark py-5">
   <div class="container px-4 px-lg-5 my-5">
