--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:alert] %>
+  <div class="alert alert-danger"><%= flash[:alert] %></div>
+<% end %>
 <div class="container">
   <main>
     <div class="py-5 text-center">
