エラーメッセージの日本語化対応

--- a/app/views/carts/_cart_product.html.erb
+++ b/app/views/carts/_cart_product.html.erb
@@ -9,7 +9,7 @@
     <% end %>
   </div>
   <span class="text-body-secondary">
-    <%= number_to_currency(cart_product.product.price, locale: 'jp') %>
+    <%= number_to_currency(cart_product.product.price, locale: 'ja') %>
     <%= " x #{cart_product.quantity}" %>
   </span>
 </li>
