--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,7 +14,7 @@
         <td><%= link_to order.id, order %></td>
         <td><%= order.last_name %></td>
         <td><%= order.first_name %></td>
-        <td><%= number_to_currency(order.total_price, locale: 'jp') %></td>
+        <td><%= number_to_currency(order.total_price, locale: 'ja') %></td>
       </tr>
     <% end %>
   </tbody>
