--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,7 +20,7 @@
           <div class="bi-star-fill"></div>
         </div>
         <!-- Product price-->
-        <%= number_to_currency(product.price, locale: 'jp') %>
+        <%= number_to_currency(product.price, locale: 'ja') %>
       </div>
     </div>
     <!-- Product actions-->
