--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
         <div class="small mb-1"><%= @product.sku %></div>
         <h1 class="display-5 fw-bolder"><%= @product.name %></h1>
         <div class="fs-5 mb-5">
-          <span><%= number_to_currency(@product.price, locale: 'jp') %></span>
+          <span><%= number_to_currency(@product.price, locale: 'ja') %></span>
         </div>
         <p class="lead"><%= @product.description %></p>
         <div class="d-flex">
