--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,24 +1,3 @@
-<<<<<<< HEAD
-<% if flash[:alert] %>
-  <div class="alert alert-danger"><%= flash[:alert] %></div>
-<% end %>
-<div class="container">
-  <main>
-    <div class="py-5 text-center">
-      <h1>決済フォーム</h2>
-    </div>
-    <div class="row g-5">
-      <div class="col-md-5 col-lg-4 order-md-last">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-primary">カート</span>
-          <span class="badge bg-primary rounded-pill"><%= current_cart.total_quantity %></span>
-        </h4>
-        <ul class="list-group mb-3">
-          <% current_cart.cart_products.each do |cart_product| %>
-            <%= render partial: 'cart_product', locals: { cart_product: cart_product } %>
-          <% end %>
-          <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
-=======
 <% if flash[:error_messages]  %>
   <div class="alert alert-danger">
     <ul>
@@ -43,75 +22,23 @@
               <% current_cart.cart_products.each do |cart_product| %>
                 <%= render partial: 'carts/cart_product', locals: { cart_product: cart_product } %>
               <% end %>
-              <%# <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
->>>>>>> main
-            <div class="text-success">
-              <h6 class="my-0"><%= current_cart.promotion_code&.code %></h6>
-            </div>
-<<<<<<< HEAD
-            <span class="text-success"><%= number_to_currency(current_cart.promotion_code&.discount_amount, locale: 'jp') %></span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between">
-            <span>合計金額</span>
-            <strong><%= number_to_currency(current_cart.total_price, locale: 'jp') %></strong>
-          </li>
-        </ul>
-        <%= form_with url: 'promotion-codes/use', method: :post, class: "card p-2" do |form| %>
-          <div class="input-group">
-            <%= form.text_field :code, class: "form-control", placeholder: "プロモーションコード" %>
-            <button type="submit" class="btn btn-secondary">適用</button>
-          </div>
-        <% end %>
-      </div>
-      <div class="col-md-7 col-lg-8">
-        <h4 class="mb-3">請求先</h4>
-        <%= form_with model: @order do |form| %>
-          <%= form.hidden_field :total_price, value: current_cart.total_price %>
-          <% current_cart.cart_products.each_with_index do |cart_product, index| %>
-            <%= form.hidden_field "order_details[][product_name]", value: cart_product.product.name %>
-            <%= form.hidden_field "order_details[][product_sku]", value: cart_product.product.sku %>
-            <%= form.hidden_field "order_details[][unit_price]", value: cart_product.product.price %>
-            <%= form.hidden_field "order_details[][quantity]", value: cart_product.quantity %>
-          <% end %>
-          <div class="row g-3">
-            <div class="col-sm-6">
-              <%= form.label :last_name, '姓', class: "form-label" %>
-              <%= form.text_field :last_name, class: "form-control", placeholder: "田中" %>
-            </div>
-            <div class="col-sm-6">
-              <%= form.label :first_name, '名', class: "form-label" %>
-              <%= form.text_field :first_name, class: "form-control", placeholder: "太郎" %>
-            </div>
-            <div class="col-12">
-              <%= form.label :email, 'Email（任意）', class: "form-label" %>
-              <%= form.text_field :email, class: "form-control", placeholder: "example@example.com" %>
-            </div>
-            <div class="col-12">
-              <%= form.label :prefecture, '都道府県', class: "form-label" %>
-              <%= form.text_field :prefecture, class: "form-control", placeholder: "東京都" %>
-            </div>
-            <div class="col-12">
-              <%= form.label :address, '市区町村', class: "form-label" %>
-              <%= form.text_field :address, class: "form-control", placeholder: "渋谷区東" %>
-            </div>
-            <div class="col-12">
-              <%= form.label :address2, '丁目・番地', class: "form-label" %>
-              <%= form.text_field :address2, class: "form-control", placeholder: "1-1-1" %>
-            </div>
-=======
-            <span class="text-success">−$5</span>
-          </li> %>
+              <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
+                <div class="text-success">
+                  <h6 class="my-0"><%= current_cart.promotion_code&.code %></h6>
+                </div>
+                <span class="text-success"><%= number_to_currency(current_cart.promotion_code&.discount_amount, locale: 'ja') %></span>
+              </li>
               <li class="list-group-item d-flex justify-content-between">
                 <span>合計金額</span>
                 <strong><%= number_to_currency(current_cart.total_price, locale: 'ja') %></strong>
               </li>
             </ul>
-            <form class="card p-2">
+            <%= form_with url: 'promotion-codes/use', method: :post, class: "card p-2" do |form| %>
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="プロモーションコード">
+                <%= form.text_field :code, class: "form-control", placeholder: "プロモーションコード" %>
                 <button type="submit" class="btn btn-secondary">適用</button>
               </div>
-            </form>
+            <% end %>
           </div>
           <div class="col-md-7 col-lg-8">
             <h4 class="mb-3">請求先</h4>
@@ -173,7 +100,6 @@
               <button class="w-100 btn btn-primary btn-lg" type="submit">購入する</button>
               <hr class="my-4">
             <% end %>
->>>>>>> main
           </div>
         </div>
       </main>
